ajuste color criticidad

--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -1617,8 +1617,10 @@
                                             <div>
                                                 <apx-chart [series]="getSeries(criticidad, basicBarChartGeneral)" [colors]="basicBarChartGeneral.colors"
                                                     [chart]="basicBarChartGeneral.chart" [dataLabels]="basicBarChartGeneral.dataLabels"
-                                                    [plotOptions]="basicBarChartGeneral.plotOptions" dir="ltr" dir="ltr"
-                                                    [xaxis]="basicBarChartGeneral.xaxis"></apx-chart>
+                                                    [plotOptions]="basicBarChartGeneral.plotOptions" dir="ltr"
+                                                    [xaxis]="basicBarChartGeneral.xaxis" [stroke]="basicBarChartGeneral.stroke"
+                                                    [fill]="basicBarChartGeneral.fill" [title]="basicBarChartGeneral.title"
+                                                    [tooltip]="basicBarChartGeneral.tooltip" [legend]="basicBarChartGeneral.legend"></apx-chart>
                                             </div>
                                         </div>
                                     </div>
